--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <div class="col-md-10 display-table-cell valign-top box">
 				<div class="row">
 
-					<header>
+					<header id="nav-header" class="clearfix">
 						<div class="col-md-5">
-							<input type="text" name="search" id="search" placeholder="Type something...">
+							<input type="text" name="search" id="header-search-field" placeholder="Type something...">
 						</div>
 						<div class="col-md-7">
-							<ul>
-								<li>Welcome to your administration area</li>
+							<ul class="pull-right">
+								<li id="welcome">Welcome to your administration area</li>
 								<li>
 									<a href="#">
 										<span class="glyphicon glyphicon-bell"></span>
@@ -55,7 +55,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#">
+									<a href="#" class="logout">
 										<span class="glyphicon glyphicon-log-out"></span>
 										Log out
 									</a>
@@ -80,7 +80,6 @@
     </div><!--.container-fluid-->
     
     
-
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Individual files -->
