--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 						<div class="col-md-7">
 							<ul class="pull-right">
 								<li id="welcome">Welcome to your administration area</li>
-								<li>
+								<li class="fixed-width">
 									<a href="#">
 										<span class="glyphicon glyphicon-bell"></span>
 										<span class="label label-warning">3</span>
 									</a>
 								</li>
-								<li>
+								<li class="fixed-width">
 									<a href="#">
 										<span class="glyphicon glyphicon-envelope"></span>
 										<span class="label label-warning">3</span>
@@ -67,7 +67,7 @@
 				</div>
            
 				<div class="row">
-					<footer>
+					<footer id="admin-footer" class="clearfix">
 						<div class="pull-left"><b>Copyright </b>&copy; 2016 </div>
 						<div class="pull-right"> <a href="#">Admin Theme</a> </div>
 					</footer>
