--- a/new-article.html
+++ b/new-article.html
@@ -9,7 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    
+    <!-- Chosen -->
+    <link rel="stylesheet" href="vendor/chosen_v1.4.0/chosen.min.css">
     <!--// Custom Stylesheet //-->
     <link href="css/style.css" rel="stylesheet">
 
@@ -31,7 +32,7 @@
                 <h1 class="hidden-sm hidden-xs">Navigation</h1>
                 <ul>
                 	<li class="link active">
-						<a href="#">
+						<a href="index.html">
 							<span class="glyphicon glyphicon-th" aria-hidden="true"></span>
 							<span class="hidden-sm hidden-xs">Dashboard</span>
 						</a>
@@ -44,7 +45,7 @@
                 			<span class="label label-success pull-right hidden-sm hidden-xs">20</span>
                 		</a>
                 		<ul class="collapse collapseable" id="collapse-post">
-                			<li><a href="#">Create New</a></li>
+                			<li><a href="new-article.html">Create New</a></li>
                 			<li><a href="#">View Article</a></li>
                 		</ul>
                 	</li>
@@ -148,7 +149,7 @@
           						</div>
           						<div class="form-group">
           							<label class="sr-only">Tags</label>
-          							<select data-placeholder="Select tags" multiple name="tags" class="form-control">
+          							<select data-placeholder="Select tags" multiple name="tags" class="form-control chosen-select">
           								<option></option>
           								<option>html</option>
           								<option>css</option>
@@ -196,6 +197,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Individual files -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="vendor/chosen_v1.4.0/chosen.jquery.min.js"></script>
     <script src="js/app.js"></script>
+	
   </body>
 </html>
