--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Chosen -->
     <link rel="stylesheet" href="vendor/chosen_v1.4.0/chosen.min.css">
+    <!-- Summernote -->
+    <link rel="stylesheet" href="vendor/summernote-master/dist/summernote.css">
     <!--// Custom Stylesheet //-->
     <link href="css/style.css" rel="stylesheet">
 
@@ -134,6 +136,40 @@
 					</header>
 
 				</div>
+        		<div class="container">
+        			<div class="row">
+						<div class="col-md-6">
+							<div id="content">
+								<header>
+									<h2 class="page_title">Admin theme</h2>
+								</header>
+								<div class="content-inner">
+									Insert module here:
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div id="content">
+								<header>
+									<h2 class="page_title">Admin theme</h2>
+								</header>
+								<div class="content-inner">
+									Insert module here:
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div id="content">
+								<header>
+									<h2 class="page_title">Admin theme</h2>
+								</header>
+								<div class="content-inner">
+									Insert module here:
+								</div>
+							</div>
+						</div>
+        			</div>
+        		</div>
            
 				<div class="row">
 					<footer id="admin-footer" class="clearfix">
@@ -153,7 +189,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Individual files -->
     <script src="js/bootstrap.min.js"></script>
+	<script src="vendor/chosen_v1.4.0/chosen.jquery.js"></script>
+    <script src="vendor/summernote-master/dist/summernote.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="vendor/chosen_v1.4.0/chosen.jquery.js"></script>
   </body>
 </html>
