--- a/new-article.html
+++ b/new-article.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Chosen -->
     <link rel="stylesheet" href="vendor/chosen_v1.4.0/chosen.min.css">
+    <!-- Summernote -->
     <link rel="stylesheet" href="vendor/summernote-master/dist/summernote.css">
     <!--// Custom Stylesheet //-->
     <link href="css/style.css" rel="stylesheet">
@@ -177,7 +178,6 @@
           					</form>
           				</div>
           			</div>
-          			
           		</div>
            
 				<div class="row">
